--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: "3.7"
 services:
+  backend:
+    build: library_back
+    container_name: gces_tpi_back
+    ports:
+      - 8000:8000
+    env_file:
+      - ./library_back/.env
+    depends_on:
+      - postgres
   postgres:
     build: postgres
     container_name: gces_tpi_db
