--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout v3
       uses: actions/checkout@v3
     - name: test backend
-      run: docker-compose run back python -m pytest accounts books
+      run: docker-compose run backend python -m pytest accounts books
     - name: test frontent
-      run: docker-compose run front npm run test
+      run: docker-compose run frontend npm run test
       
