--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,31 @@ jobs:
     runs-on: ubuntu-latest
     name: "test"
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: library_db
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
+    
     steps:
     - name: Checkout v3
       uses: actions/checkout@v3
     - name: test backend
-      run: docker-compose run backend python manage.py test
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      working-directory: ./library_back
+      run: |
+        pwd
+        python3 -m venv env
+        . env/bin/activate
+        pip install -r requirements.txt
+    - name: test backend
+      working-directory: ./library_back
+      run: |
+        pip install pytest
+        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml
     - name: test frontent
       run: docker-compose run frontend npm run test
       
