--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,14 @@
 name: Test CI
 
 on:
-  workflow_run:
-    workflows: ["Build CI"]
-    types: 
-      - completed
+#  workflow_run:
+#    workflows: ["Build CI"]
+#    types: 
+#      - completed
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
       
 jobs:
   tests:  
@@ -14,7 +18,10 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.9]
+    defaults:
+      run:
+        working-directory: ./library_back
         
     services:
       postgres_main:
