--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ on:
     branches: [ "main" ]
       
 jobs:
-  tests:  
+  backend-tests:  
     runs-on: ubuntu-latest
-    name: "test"
+    name: "backend tests"
 #    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
       max-parallel: 4
@@ -36,7 +36,6 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
-
       - name: setup python
         uses: actions/setup-python@v3
         with:
@@ -44,7 +43,7 @@ jobs:
       - name: install req
         run: |
               pip install -r requirements.txt
-      - name: Run tests
+      - name: run tests
         env:
             DEBUG: "0"
             POSTGRES_DB: postgres
@@ -56,4 +55,27 @@ jobs:
               python manage.py makemigrations
               python manage.py migrate
               python manage.py test
+                
+  frontend-tests:
+    runs-on: ubuntu-latest
+    name: "frontend tests"
+    defaults:
+      run:
+        working-directory: ./library_front
+    strategy:
+      max-parallel: 4
+      matrix:
+        node-version: [18.12.x]
+        
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: run install
+        run: npm install
+      - name: run tests
+        run: npm run test
       
