--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,11 +24,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: install and run flake 8
+      - name: install flake 8
         run: |
           python -m pip install --upgrade pip
           pip3 install flake8
-          flake8 --count --select=F6,F7,F8,E9 --exclude=*.pyc,*migrations* --statistics
+      - name: run flake 8
+        run: flake8 --count --select=F6,F7,F8,E9 --exclude=*.pyc,*migrations* --statistics
           
   frontend-lint:
     runs-on: ubuntu-latest
@@ -48,7 +49,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: run test
+      - name: run npm install
         run: |
           npm install
-          npm exec eslint ./src
+      - name: exec eslint
+        run: npm exec eslint ./src
